# technical-test-silk

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  wsgi.py
app/: __init__.py  config.py  errors.py  logging_config.py
app/api/v1/: clients.py  loans.py
app/models/: __init__.py  accounting.py  amortization.py  client.py  loan.py  payment.py
app/schemas/: loan_schemas.py
app/services/: accounting_service.py  financial.py  loan_service.py
docs/: api.md  aws_architecture.md  design_decisions.md  er_diagram.md  financial_answers.md  schema.sql
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: fix_production.py
tests/: conftest.py
tests/integration/: test_loans_api.py
tests/unit/: test_financial.py  test_payment_order.py
