[project]
name = "rombo-creditos"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.7",
    "marshmallow>=3.21.3",
    "psycopg2-binary>=2.9.9",
    "python-json-logger>=2.0.7",
    "gunicorn>=22.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-flask>=1.3.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
